--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 00:05:04 2018</p>
+         Last Run: Sun Jul 22 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>4</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>68</td>
+                        <td>NNE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
-                        <td>49</td>
+                        <td>2</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>59</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>4</td>
-                        <td>57</td>
+                        <td>1</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>52</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "3",
-                 "4"
+                 "2",
+                 "1"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "49",
-                 "57"
+                 "48",
+                 "50",
+                 "58"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "59",
-                 "52"
+                 "51",
+                 "50",
+                 "47"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 00:05:04 2018</p>
+         Last Run: Sun Jul 22 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,59 +234,59 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>33</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>5</td>
-                        <td>46</td>
+                        <td>Partly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>1</td>
+                        <td>44</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>21</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Clear</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>36</td>
-                        <td>63</td>
+                        <td>24</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>E</td>
-                        <td>50</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -333,8 +333,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
+                 "21",
                  "20",
-                 "19",
                  "17",
                  "15"
                ]
@@ -346,8 +346,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
+                 "21",
                  "20",
-                 "19",
                  "17",
                  "15"
                ]
@@ -404,9 +404,9 @@
                "data":[
                  "0",
                  "0",
-                 "5",
-                 "30",
-                 "36"
+                 "1",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "42",
-                 "46",
+                 "38",
+                 "41",
+                 "44",
                  "54",
-                 "63"
+                 "64"
                ]
              },
              {
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "28",
-                 "21",
-                 "35",
-                 "50"
+                 "47",
+                 "55",
+                 "48",
+                 "36",
+                 "29"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 00:05:04 2018</p>
+         Last Run: Sun Jul 22 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -475,8 +475,8 @@
                         <td>36</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>0</td>
+                        <td>WSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -486,8 +486,8 @@
                         <td>0</td>
                         <td>30</td>
                         <td>5</td>
-                        <td>10</td>
-                        <td>S</td>
+                        <td>8</td>
+                        <td>SSW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -496,10 +496,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
-                        <td>10</td>
-                        <td>SSE</td>
+                        <td>8</td>
+                        <td>S</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -511,18 +511,18 @@
                         <td>24</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>4</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>23</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SE</td>
                         <td>7</td>
                      </tr>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "28",
-                 "29"
+                 "28"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "28",
-                 "29"
+                 "28"
                ]
              }
            ]
@@ -654,7 +654,7 @@
                "data":[
                  "36",
                  "30",
-                 "27",
+                 "26",
                  "24",
                  "23"
                ]
@@ -664,7 +664,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "1",
                  "2",
                  "4",
