--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 01:05:04 2018</p>
+         Last Run: Sun Jul 22 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
-                        <td>48</td>
+                        <td>2</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>47</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NE</td>
-                        <td>50</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>1</td>
-                        <td>58</td>
+                        <td>4</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>47</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
                  "2",
-                 "1"
+                 "2",
+                 "4"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "50",
-                 "58"
+                 "46",
+                 "47",
+                 "56"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "50",
-                 "47"
+                 "37",
+                 "33",
+                 "29"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 01:05:04 2018</p>
+         Last Run: Sun Jul 22 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,14 +231,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,17 +258,17 @@
                         <td>20</td>
                         <td>20</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>24</td>
                         <td>54</td>
                         <td>0</td>
@@ -332,10 +332,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "21",
                  "20",
-                 "17",
+                 "18",
                  "15"
                ]
              },
@@ -345,10 +345,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "21",
                  "20",
-                 "17",
+                 "18",
                  "15"
                ]
              }
@@ -414,9 +414,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "41",
-                 "44",
+                 "39",
+                 "42",
+                 "45",
                  "54",
                  "64"
                ]
@@ -426,9 +426,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "55",
                  "48",
+                 "57",
+                 "49",
                  "36",
                  "29"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 01:05:04 2018</p>
+         Last Run: Sun Jul 22 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,10 +472,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>WSW</td>
+                        <td>10</td>
+                        <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -484,22 +484,22 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>5</td>
-                        <td>8</td>
-                        <td>SSW</td>
+                        <td>10</td>
+                        <td>W</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>S</td>
+                        <td>WSW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -508,23 +508,23 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>4</td>
+                        <td>NE</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>7</td>
+                        <td>N</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,9 +572,9 @@
                "data":[
                  "24",
                  "26",
-                 "27",
                  "28",
-                 "28"
+                 "28",
+                 "29"
                ]
              },
              {
@@ -585,9 +585,9 @@
                "data":[
                  "24",
                  "26",
-                 "27",
                  "28",
-                 "28"
+                 "28",
+                 "29"
                ]
              }
            ]
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "30",
-                 "26",
-                 "24",
-                 "23"
+                 "34",
+                 "29",
+                 "25",
+                 "23",
+                 "21"
                ]
              },
              {
@@ -667,8 +667,8 @@
                  "1",
                  "1",
                  "2",
-                 "4",
-                 "7"
+                 "2",
+                 "3"
                ]
              }
            ]
