--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 02:05:04 2018</p>
+         Last Run: Sun Jul 22 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>2</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>37</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,19 +48,19 @@
                         <td>2</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NE</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>4</td>
-                        <td>56</td>
+                        <td>3</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
                         <td>29</td>
                      </tr>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "19",
+                 "18",
                  "18",
                  "16"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "19",
+                 "18",
                  "18",
                  "16"
                ]
@@ -172,7 +172,7 @@
                "data":[
                  "2",
                  "2",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
                  "47",
-                 "56"
+                 "47",
+                 "55"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "33",
+                 "40",
+                 "34",
                  "29"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 02:05:04 2018</p>
+         Last Run: Sun Jul 22 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -230,27 +230,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>0</td>
-                        <td>39</td>
-                        <td>2</td>
-                        <td>10</td>
-                        <td>SE</td>
-                        <td>48</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
                         <td>42</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>64</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>0</td>
+                        <td>43</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,23 +258,23 @@
                         <td>20</td>
                         <td>20</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>49</td>
+                        <td>ESE</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>24</td>
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>36</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -286,7 +286,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -332,10 +332,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
                  "21",
                  "20",
-                 "18",
+                 "20",
+                 "17",
                  "15"
                ]
              },
@@ -345,10 +345,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
                  "21",
                  "20",
-                 "18",
+                 "20",
+                 "17",
                  "15"
                ]
              }
@@ -414,9 +414,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
                  "42",
-                 "45",
+                 "43",
+                 "46",
                  "54",
                  "64"
                ]
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "57",
-                 "49",
-                 "36",
-                 "29"
+                 "64",
+                 "68",
+                 "50",
+                 "31",
+                 "26"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 02:05:04 2018</p>
+         Last Run: Sun Jul 22 03:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,7 +472,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -493,8 +493,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>25</td>
                         <td>6</td>
@@ -517,8 +517,8 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>21</td>
                         <td>6</td>
@@ -572,9 +572,9 @@
                "data":[
                  "24",
                  "26",
+                 "27",
                  "28",
-                 "28",
-                 "29"
+                 "28"
                ]
              },
              {
@@ -585,9 +585,9 @@
                "data":[
                  "24",
                  "26",
+                 "27",
                  "28",
-                 "28",
-                 "29"
+                 "28"
                ]
              }
            ]
@@ -652,7 +652,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "35",
                  "29",
                  "25",
                  "23",
